# kit

./: .gitignore  CLAUDE.md  LINEAR_CLI.md  README.md  cleanup-worktree  git-root  github  linear  pyproject.toml  richpaste  session-test.txt  websearch  wt  wt-create
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: web-researcher.md
commands/: websearch.md
hooks/: cmux-pr-detect
linear-api/: SCHEMA.md
mermaid/: package-lock.json  package.json
mermaid/src/: cli.ts  render.ts
pi/: package-lock.json  package.json
pi/extensions/: cmux.ts  gpt-fast-model.ts  pi-tool-renderer-compat.ts  usage-footer.ts
pi/patches/: pi-tool-renderer-compat-image-workaround.patch  vanillagreen-view-image-exclusion.patch
skills/annotate-diff/: SKILL.md
skills/ci-debug/: SKILL.md
skills/ci-debug/scripts/: ci-debug
skills/graphite/: skill.md
skills/graphite-stacked-prs/: skill.md
skills/graphite/docs/: best-practices.md  command-reference.md  restacking.md
skills/librarian/: SKILL.md
skills/linear-planner/: SKILL.md
skills/log-debugger/: SKILL.md  manifest.json
skills/pr-comments/: SKILL.md
skills/pr-comments/scripts/: fetch-pr-comments
skills/quiz-me/: SKILL.md
skills/skill-evaluator/: README.md  SKILL.md  manifest.json
skills/skill-evaluator/templates/: eval-config.yaml
skills/skill-generator/: SKILL.md
skills/spawn-workspace/: SKILL.md
skills/watch-pr/: SKILL.md
skills/watch-pr/scripts/: poll-pr-status  poll-pr-status.py
skills/web-researcher/: SKILL.md
skills/web-researcher/eval/: RECOMMENDATIONS.md  analyze_results.py  (+1 more)
(+3 files in other folders)
