[project]
name = "kit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp2py>=0.4.0",
    "click",
    "questionary",
]

[project.optional-dependencies]
dev = [
    "mypy",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
